11/21/13 increase y-margin on pH value display
11/20/13 use a darker gray for pH meter wire, since it overlaps the gray faucet so frequently
11/20/13 prevent total volume from exceeding max
11/20/13 tweak all 'diluted' solute colors
11/20/13 change 'Drain Cleaner' color to toilet-bowl-cleaner blue
11/19/13 fix 'reset all' for 'Basics' screen
11/19/13 use same color as beers-law-lab for water
11/19/13 switch to a color range for solutes
11/19/13 make 'color' static for solvent and solute, it's dynamic only for solution
11/19/13 add bulky background to pH value display in 'Basics'
11/19/13 factor out PHValueNode, to be reused in all pH meters
11/19/13 move pH indicator (arrow) to BasicPHMeterNode, since the indicator is different in all 3 meters
11/19/13 when changing solute, drop solution volume to zero
11/18/13 add separator in beaker control panel
11/18/13 extract PHScaleNode, to be used in both 'Basics' and 'Solutions' pH meters
11/18/13 prepare 'pH scale' portion of Basics pH meter for reuse in 'Solutions' screen
11/18/13 adjust drag bounds of dropper
11/18/13 light gray background for control panel
11/18/13 add 'Molecule count' and 'ratio' check boxes (no view components yet)
11/18/13 add options to various model elements, simplify usage of constructors, fix 'Reset All'
11/18/13 use opaque colors for solutes, so that color of solution matches dropper when solution is 100% solute
11/18/13 optionally show pH value of solute on dropper ('pH 11.00')
11/18/13 pH meter for 'Custom' screen
11/18/13 rename PHMeterNode to BasicsPHMeterNode, since each screen has a different meter
11/18/13 start fleshing out model and view for 'Custom' screen
11/18/13 move model constants to PHScaleConstants
11/15/13 add solvent color behind solution color in beaker, make solvent (water) color opaque
11/14/13 move PHMeterNode to basics.view package, since it's specific to 'Basics' screen
11/13/13 revert screen background to 'white' to demonstrate problems with this color